# guap_y2_h2_op_l4

./: CMakeLists.txt  README.md
docs/: 4432Кз_ГиппиусКГ_ЛР4.docx
include/: hospital_worker.hpp
src/: hospital_worker.cpp  main.cpp
